changed img urls

--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
 </head>
 <body>
     <div class="container">
-        <div class="panel active" style="background-image: url('/images/cafe\ de\ paz.png');">
+        <div class="panel active" style="background-image: url('images/cafe\ de\ paz.png');">
             <h3> Café De Paz digital painting</h3>
         </div>
-        <div class="panel" style="background-image: url(/images/mini_vector.png);">
+        <div class="panel" style="background-image: url(images/mini_vector.png);">
             <h3>Mini Cooper Vector Art</h3>
         </div>
-        <div class="panel" style="background-image: url(/images/siennaevo.png);">
+        <div class="panel" style="background-image: url(images/siennaevo.png);">
             <h3>Toyota Sienna Evolution</h3>
         </div>
-        <div class="panel" style="background-image: url(/images/Grand\ Lodge\ Vector.png);">
+        <div class="panel" style="background-image: url(images/Grand\ Lodge\ Vector.png);">
             <h3>Grand Lodge @ The Gaylord Rockies</h3>
         </div>
-        <div class="panel" style="background-image: url(/images/social.png);">
+        <div class="panel" style="background-image: url(images/social.png);">
             <h3>Coffee Grind Guide</h3>
         </div>
-        <div class="panel" style="background-image: url('/images/abyss.png');">
+        <div class="panel" style="background-image: url('images/abyss.png');">
             <h3>Concept for Underground DJ Poster</h3>
         </div>
-        <div class="panel" style="background-image: url(/images/liquid.png);">
+        <div class="panel" style="background-image: url(images/liquid.png);">
             <h3>Liquify/Pastel Study</h3>
         </div>
-        <div class="panel" style="background-image: url(/images/untitled.png);">
+        <div class="panel" style="background-image: url(images/untitled.png);">
             <h3>Pastel Study</h3>
         </div>
-        <div class="panel" style="background-image: url(/images/bleed.png);">
+        <div class="panel" style="background-image: url(images/bleed.png);">
             <h3>Pattern Study 1</h3>
         </div>
-        <div class="panel" style="background-image: url(/images/geometric\ eye.png);">
+        <div class="panel" style="background-image: url(images/geometric\ eye.png);">
             <h3>Pattern Study 2</h3>
         </div>
-        <div class="panel" style="background-image: url(/images/Sunset_logo.png);">
+        <div class="panel" style="background-image: url(images/Sunset_logo.png);">
             <h3>Digital Logo</h3>
         </div>
     </div>
